--- a/package.json
+++ b/package.json
@@ -6,12 +6,11 @@
     "start:prod": "node ./dist/server.js",
     "start:dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "build": "tsc",
-    "lint": "eslint 'src/**/*.ts' --no-cache",
-    "lint:debug": "eslint 'src/**/*.ts' --debug",
+    "lint:check": "eslint 'src/**/*.ts' --no-cache",
     "lint:fix": "eslint 'src/**/*.ts' --fix",
-    "prettier": "prettier --write 'src/**/*.{ts,json}'",
-    "prettier:fix": "prettier --write 'src/**/*.{ts,json}'",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prettier:check": "prettier --write 'src/**/*.{ts,json}'",
+    "test": "lint:check && prettier:fix && tsc",
+    "prepare": "husky"
   },
   "keywords": [],
   "author": "",
@@ -37,6 +36,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "globals": "^15.2.0",
+    "husky": "^9.0.11",
     "mongoose": "^8.4.0",
     "prettier": "^3.2.5",
     "ts-node-dev": "^2.0.0",
