--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint:check": "eslint 'src/**/*.ts' --no-cache",
     "lint:fix": "eslint 'src/**/*.ts' --fix",
     "prettier:check": "prettier --write 'src/**/*.{ts,json}'",
-    "test": "lint:check && prettier:fix && tsc",
+    "test": "npm run lint:check && npm run prettier:fix",
     "prepare": "husky"
+  },
+  "lint-staged": {
+    "src/**/*.{ts,json}": "npm run lint:check && npm run prettier:check"
   },
   "keywords": [],
   "author": "",
@@ -37,6 +40,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "globals": "^15.2.0",
     "husky": "^9.0.11",
+    "lint-staged": "^15.2.5",
     "mongoose": "^8.4.0",
     "prettier": "^3.2.5",
     "ts-node-dev": "^2.0.0",
