--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "prepare": "husky"
   },
   "lint-staged": {
-    "src/**/*.{ts,json}": "npm run lint:check && npm run prettier:check"
+    "src/**/*.{ts,json}": [
+      "npm run prettier:check",
+      "npm run lint:fix",
+      "eslint --max-warnings 0 ."
+    ]
   },
   "keywords": [],
   "author": "",
